# optics-zurihac-2021

exercises/: optics-exercises.cabal  stack.yaml
exercises/src/: Exercises.hs  Spec.hs
exercises/test/: RunTests.hs
