name:                optics-exercises
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base
                     , mtl
                     , optics-core == 0.4
                     , optics-th == 0.4          
                     , hspec
  hs-source-dirs:
    src
  default-language:    Haskell2010
  exposed-modules:     Exercises, LabelsExercises, MiniLens, MiniOptics, Spec

test-suite tests-optics-exercises
  type: exitcode-stdio-1.0
  main-is: RunTests.hs
  hs-source-dirs:
    test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      optics-exercises
  default-language: Haskell2010